--- a/src/task-03.html
+++ b/src/task-03.html
@@ -14,6 +14,8 @@
         line-height: 1.5;
       }
     </style>
+    <link rel="stylesheet" href="./css/task-01.css">
+
   </head>
   <body>
     <p><a href="index.html">На главную</a></p>
