--- a/src/task-04.html
+++ b/src/task-04.html
@@ -18,9 +18,12 @@
   <body>
     <p><a href="index.html">На главную</a></p>
 
-    <input type="text" placeholder="Ваше имя?" id="name-input" />
-    <h1>Привет, <span id="name-output">незнакомец</span>!</h1>
+    <div id="counter">
+      <button type="button" data-action="decrement">-1</button>
+      <span id="value">0</span>
+      <button type="button" data-action="increment">+1</button>
+    </div>
 
-    <script src="js/task-05.js" type="module"></script>
+    <script src="js/task-04.js" type="module"></script>
   </body>
 </html>
